--- a/.github/workflow/build.yml
+++ b/.github/workflow/build.yml
@@ -19,4 +19,4 @@ jobs:
                 distribution: 'temurin'
                 java-version: 17
           - name: Run test and building
-            run: ./mvnw clean test compile war:war
+            run: ./gradlew clean test compile war:war
