--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
                 distribution: 'temurin'
                 java-version: 17
             - name: Run test and building
-              run: ./mvnw clean test compile war:war
+              run: ./gradlew clean test compile war:war
             - name: Moving war 
               run: mkdir staging && cp target/*.war staging
             - name: Upload archive
