--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'war'
     id 'java'
     id 'org.springframework.boot' version '3.0.2'
     id 'io.spring.dependency-management' version '1.1.0'
@@ -16,6 +17,10 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+war {
+    enabled = false
 }
 
 dependencies {
