--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Run test and building
               run: ./gradlew clean test compileJava bootWar
             - name: Moving war 
-              run: mkdir staging && cp target/*.war staging
+              run: mkdir staging && cp build/libs/*.war staging
             - name: Upload archive
               uses: actions/upload-artifact@v3
               with:
